list delete show effect

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -183,7 +183,14 @@ socket.on('user connection',function(user){
   $('.stock-code').html('');
   for(var i=0;i<user.length;i++)
   {
-    $('.stock-code').append("<div class='col-lg-2 code_buttons'><i class='fa fa-remove rmv'></i><center><div class='c_text'>"+user[i].label +"<br/></div><div class='confirm'><button class='btn btn-success btn-xs button'>Discard</button><button class='btn btn-danger btn-xs button'>Keep</button></div></div>");
+    $('.stock-code').append("<div class='col-lg-2 code_buttons code"+i+"'><i class='fa fa-remove rmv' onClick='enable("+i+")'></i><center><div class='c_text'>"+user[i].label +"<br/></div><div class='confirm con"+i+"'><button class='btn btn-success btn-xs button'>Discard</button><button class='btn btn-danger btn-xs button'>Keep</button></div></div>");
+
+  /*  $('.rmv').click(function(){
+      $('.confirm').show();
+      $('.code_buttons').css("height","80px");
+    })
+
+    */
   }
   stockeffect();
 
