I can add a stock and will get displayed

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -147,7 +147,7 @@ $('form').submit(function(){
 });
 socket.on('user connection',function(user){
 
-
+console.log(user);
   var ctx = document.getElementById("myChart");
   Chart.defaults.global.maintainAspectRatio = false;
 
