--- a/views/index.ejs
+++ b/views/index.ejs
@@ -143,12 +143,19 @@ var socket = io();
 $('form').submit(function(){
   socket.emit('stock code',$('#m').val());
   $('#m').val('');
+
   return false;
 });
 
 function discard(value)
 {
 socket.emit('discard',value);
+}
+
+function keep(value)
+{
+  $('.con'+value).hide();
+  $('.code'+value).css("height","50px");
 }
 socket.on('user connection',function(user){
 
@@ -163,8 +170,8 @@ console.log("print user"+user);
     var myChart = new Chart(ctx, {
     type: 'line',
     data: {
-      labels: [ ],
-      datasets: user
+      labels: [ <%-months%> ],
+      datasets: []
     },
     height:100,
     options: {
@@ -224,14 +231,8 @@ console.log("print user"+user);
       $('.stock-code').html('');
       for(var i=0;i<user.length;i++)
       {
-        $('.stock-code').append("<div class='col-lg-2 code_buttons code"+i+"'><i class='fa fa-remove rmv' onClick='enable("+i+")'></i><center><div class='c_text'>"+user[i].label +"<br/></div><div class='confirm con"+i+"'><button class='btn btn-success btn-xs button' onClick='discard(\""+user[i].label+"\")'>Discard</button><button class='btn btn-danger btn-xs button'>Keep</button></div></div>");
+        $('.stock-code').append("<div class='col-lg-2 code_buttons code"+i+"'><i class='fa fa-remove rmv' onClick='enable("+i+")'></i><center><div class='c_text'>"+user[i].label +"<br/></div><div class='confirm con"+i+"'><button class='btn btn-success btn-xs button' onClick='discard(\""+user[i].label+"\")'>Discard</button><button class='btn btn-danger btn-xs button' onClick='keep("+i+")'>Keep</button></div></div>");
 
-      /*  $('.rmv').click(function(){
-          $('.confirm').show();
-          $('.code_buttons').css("height","80px");
-        })
-
-        */
       }
       stockeffect();
 
