--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,8 @@
       href="img/logo.png">
 
 <script src="js/jsloader.js"></script>
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
 
 
 </head>
@@ -30,51 +32,16 @@
 <div class="container-fluid">
   <!-- Brand and toggle get grouped for better mobile display -->
   <div class="navbar-header">
-    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
+
     <a class="navbar-brand " href="index.html" ><b><span class="logo-fonts nav-color"> <img src="img/logo.png" width="45px"/>Stock-Shock</span></b></a>
   </div>
 
-  <!-- Collect the nav links, forms, and other content for toggling -->
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
 
 
-    </ul>
-
-    <ul class="nav navbar-nav navbar-right">
-
-      <li><a href="#" data-toggle="modal" data-target="#myModal" ><span class="nav-color" style="font-family: 'Noto Serif', serif;">About</span></a></li>
-
-    </ul>
-  </div><!-- /.navbar-collapse -->
 </div><!-- /.container-fluid -->
 </nav>
 
-<!-- Modal -->
-<div id="myModal" class="modal fade" role="dialog">
-  <div class="modal-dialog">
 
-    <!-- Modal content-->
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
-      </div>
-      <div class="modal-body">
-        <p>Some text in the modal.</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-      </div>
-    </div>
-
-  </div>
-</div>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -108,7 +75,7 @@
 
       <form action="" method="none">
   <div class="input-group">
-     <input type="text" class="form-control" id="m">
+     <input type="text" class="form-control" id="m" required>
      <span class="input-group-btn">
           <button class=" btn-add btn btn-inverse btn-primary " >Add Stock</button>
      </span>
@@ -126,8 +93,28 @@
 
   </div>
 
+<div class="instuctions">
+  <legend class="legend">
+<center>
+  Instuctions
+</center>
+  </legend>
+  <center>
+    Add stocks by entering a stock symbol (e.g. GOOGL, AAPL, AMZN, EBAY).
+<br/>
 
+Remove stocks by clicking 'x' on the stock item you want to remove.
+<br/>
+<br/>
+<img src="img/logo.png" width="45px"/> <br/>
+Built by Jay Jariwala Copyright © 2016-2017
+<br>
+<i class="fa fa-twitter"> <a href="https://twitter.com/dead_lock0" target="_blank">twitter</a> </i> | <i class="fa fa-code"> <a href="http://jayjariwala.com" target="_blank">Portfolio </a> </i> | <i class="fa fa-linkedin"> <a href="http://linkedin.com/in/jay-jariwala" target="_blank">Linkedin </a> </i>
+</center>
+<br/>
 
+</br/>
+</div>
 
 
 </div>
